@@ -13,6 +13,7 @@ FIXED: Failing he, id, yi locales
 FIXED: Non-localised setting language list sorting
 FIXED: Multiple search history problems
 FIXED: Crashes with 'Twillight' app
+FIXED: Full text search with split ZIM files
 
 1.99
 FIXED: ZIM load error on ICS
